--- a/styles/4_layout/_app.scss
+++ b/styles/4_layout/_app.scss
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   max-width: calc(#{96rem} + #{2 * $content-margin});
   min-height: 90vh;
   padding: $content-margin;
   margin: 0 auto;
+  margin-top: 6vh;
 }
 
 h1 {
@@ -39,7 +39,7 @@ h1 {
 
 @media (max-width: $breakpoint-medium-large) {
   .app {
-    justify-content: flex-start;
+    margin-top: 0;
   }
 }
 
